--- a/src/popup.css
+++ b/src/popup.css
@@ -1,14 +1,141 @@
-/* replace with your css */
-.hello-world{
-    font-size: medium;
-    font-weight: bold;
-    white-space: nowrap;
-    overflow: hidden;
+.container {
+    width: 500px;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    font-family: Arial, sans-serif;
     text-align: center;
-}
-
-.link{
-    text-decoration: underline;
-    color: blue;
+  }
+  
+  
+  .title {
+    font-size: 24px;
+    text-shadow:2px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #333;
+  }
+  
+  .button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
-}
+    transition: background-color 0.3s ease;
+  } 
+  
+  .button:hover {
+    background-color: #0056b3;
+  }
+  
+ 
+  .loading {
+    margin-top: 20px;
+    font-size: 14px;
+    color: #666;
+  }
+  
+  
+  .error {
+    margin-top: 20px;
+    color: red;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  
+ 
+  .summary-box {
+    margin-top: 20px;
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    text-align: left;
+  }
+  
+  .summary-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  .summary-text {
+    font-size: 14px;
+    color: #555;
+    line-height: 1.5;
+  } 
+
+ .form{
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left:2px;
+}  
+form:hover{
+  background-color:#0056b3;
+} 
+
+
+form.question {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    padding: 20px;
+    background-color: #f4f4f9;
+    border: 2px solid #d1d5db;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    margin: 20px auto;
+  }
+  
+  
+  form.question input[type="text"] {
+    width: 100%;
+    padding: 10px 15px;
+    font-size: 16px;
+    color: #333;
+    border: 1px solid #d1d5db;
+    border-radius: 5px;
+    outline: none;
+    transition: border-color 0.3s ease;
+  }
+  
+  form.question input[type="text"]::placeholder {
+    color: #a1a1a1;
+  }
+  
+  
+  form.question input[type="text"]:focus {
+    border-color: #4f46e5;
+    box-shadow: 0 0 3px rgba(79, 70, 229, 0.5);
+  }
+  
+  
+  form.question button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #4f46e5;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  form.question button:hover {
+    background-color: #4338ca;
+  }
